feat: 예약가능 타석 조회